src/objects/Case.object
<CustomObject>
    <fields>
        <fullName>Industry_Sector__c</fullName>
        <description>The type of industry the Organization is in/the Case pertains to:</description>
        <label>Industry Sector</label>
        <picklist>
            <picklistValues>
                <fullName>Accounting Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advanced Ceramics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advertising Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agricultural Chemicals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agricultural Machinery &amp; Eq.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agricultural Products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agricultural Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Air Conditioning/Refrigeration Eq.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aircraft/Aircraft Parts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Airport/Ground Support Eq.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Apparel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Architectural/Constr./Engineering SVC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Artwork</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Audio/Visual Eq.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Automobile/Light Truck/Vans</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Automotive Parts/Services Eq.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aviation Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Biotechnology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Books/Periodicals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Building Products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Eq. (Non-Computer)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chemical Production Machinery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Coal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial Fishing Eq.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial Vessel/Eq. (Non-Fisheries)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Composite Materials</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Computers/Peripherals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Computer Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Computer Software</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Construction Eq.</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Investment_Promotion__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Identifier for activities for reporting</description>
        <label>Investment Promotion</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Number_of_WINs_associated_to_Case__c</fullName>
        <label>Number of WINs associated to Case</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order</label>
        <referenceTo>Order</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Org_City__c</fullName>
        <description>Organization City</description>
        <formula>Account.BillingCity</formula>
        <label>Org City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Org_Country__c</fullName>
        <formula>Account.BillingCountry</formula>
        <label>Org Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Org_County__c</fullName>
        <description>3/12/2015 - Changed from &quot;Account.County__c&quot;</description>
        <formula>Account.Congressional_District_formula__c</formula>
        <label>Org County</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Org_State__c</fullName>
        <formula>Account.BillingState</formula>
        <label>Org State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Org_Street__c</fullName>
        <formula>Account.BillingStreet</formula>
        <label>Org Street</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Countries__c</fullName>
        <label>Other Countries</label>
        <picklist>
            <picklistValues>
                <fullName>Algeria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Angola</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Benin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Botswana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Burkina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Burundi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cameroon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cape Verde</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Central African Republic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chad</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Comoros</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Congo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Congo, Democratic Republic of</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Djibouti</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Egypt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Equatorial Guinea</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Eritrea</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ethiopia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gabon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gambia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ghana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guinea</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guinea-Bissau</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ivory Coast</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kenya</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lesotho</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Liberia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Libya</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Madagascar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Malawi</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Owners_Office__c</fullName>
        <formula>TEXT(Owner:User.RH_Lev_6_Office__c)</formula>
        <label>Owner&apos;s Office</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Participation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Participation</label>
        <referenceTo>Participant__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Potential_Primary_Outcome__c</fullName>
        <description>This field will be used to track the number of trade barriers reduced/removed/prevented while the case is in progress to predict the $ value impact of a WIN.</description>
        <label>Potential Primary Outcome</label>
        <picklist>
            <picklistValues>
                <fullName>Compliance with trade agreement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Facilitated export transaction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reduced/Eliminated threat to US business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reduced/Removed/Prevented trade barrier</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Primary_Country__c</fullName>
        <label>Primary Country</label>
        <picklist>
            <picklistValues>
                <fullName>Algeria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Angola</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Benin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Botswana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Burkina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Burundi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cameroon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cape Verde</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Central African Republic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chad</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Comoros</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Congo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Congo, Democratic Republic of</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Djibouti</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Egypt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Equatorial Guinea</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Eritrea</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ethiopia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gabon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gambia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ghana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guinea</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guinea-Bissau</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ivory Coast</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kenya</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lesotho</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Liberia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Libya</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Madagascar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Malawi</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Recent_Comment__c</fullName>
        <label>Recent Comment</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Record_Type__c</fullName>
        <description>to select record type with one button publisher</description>
        <label>Case Type</label>
        <picklist>
            <picklistValues>
                <fullName>Advocacy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial Diplomacy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Export Promotion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Investment Promotion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Client Assist</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Record_type_selector__c</fullName>
        <description>to select record type with one button publisher</description>
        <inlineHelpText>If the wrong case type was selected, you can modify it here.</inlineHelpText>
        <label>Case Type Selector</label>
        <picklist>
            <picklistValues>
                <fullName>Advocacy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial Dipomacy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Export Promotion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Investment Promotion</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Related_Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>If the objective of this case is a milestone towards an ultimate goal, you can relate this case to the parent/ultimate case record.</inlineHelpText>
        <label>Related Parent Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Related Child Cases</relationshipLabel>
        <relationshipName>RelatedCases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Related_Case_del__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>If the objective of this case is a milestone towards an ultimate goal, you can relate this case to the parent/ultimate case record.</inlineHelpText>
        <label>Related Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Related Cases</relationshipLabel>
        <relationshipName>RelatedCases_del</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Request_Case_Removal__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When record is created in error</inlineHelpText>
        <label>Request Case Removal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Running_User__c</fullName>
        <description>Running user name</description>
        <formula>$User.FirstName + &apos; &apos; +  $User.LastName</formula>
        <label>Running User</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Running_user_Case_Contributor__c</fullName>
        <label>Running user Case Contributor</label>
        <summaryFilterItems>
            <field>Case_Contributor__c.Contributor_Name__c</field>
            <operation>equals</operation>
            <value>$User.ID</value>
        </summaryFilterItems>
        <summaryForeignKey>Case_Contributor__c.Case_ID__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Sensitive_Attachment_Links__c</fullName>
        <label>Sensitive Attachment Links</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Sent_Survey__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Sent Survey True</description>
        <label>Sent Survey</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SharePoint_ID__c</fullName>
        <description>Legacy SharePoint record ID</description>
        <label>SharePoint ID</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SharePoint_Org_Name__c</fullName>
        <description>Legacy SharePoint Organization Name</description>
        <label>SharePoint Organization Name</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Site__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The site that the case originated from</description>
        <label>Site</label>
        <referenceTo>Site__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Survey_Send_Time__c</fullName>
        <formula>DATETIMEVALUE(DATE( year(DATEVALUE(ClosedDate)), month(DATEVALUE(ClosedDate)),day(DATEVALUE(ClosedDate)))) + 1 + 16.5/24</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Survey Send Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Trade_Barrier__c</fullName>
        <description>dummy placeholder</description>
        <label>Trade Barrier Area(s)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>agf__ADM_Work__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>A connection to the Agile Accelerator Work object used to track Bugs, Investigations and User Stories</description>
        <label>Work</label>
        <referenceTo>agf__ADM_Work__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>AgileAcceleratorCases</relationshipName>
        <type>Lookup</type>
    </fields>
    <listViews>
        <fullName>All_Cases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.RECORDTYPE</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>OWNER_NAME</columns>
        <columns>Owners_Office__c</columns>
        <columns>Actual_Create_Date__c</columns>
        <columns>CASES.CLOSED</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Request_Case_Removal__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.Advocacy,Case.Commercial_Diplomacy,Case.Export_Promotion,Case.Investment_Promotion</value>
        </filters>
        <label>All Cases</label>
    </listViews>
    <listViews>
        <fullName>All_Non_TANC_Commercial_Diplomacy_Cases</fullName>
        <booleanFilter>1 AND 2 AND 3</booleanFilter>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>OWNER_NAME</columns>
        <columns>Actual_Create_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.Commercial_Diplomacy</value>
        </filters>
        <filters>
            <field>CASES.STATUS</field>
            <operation>equals</operation>
            <value>New,In Progress</value>
        </filters>
        <filters>
            <field>CD_Relevant_Agreement__c</field>
            <operation>notContain</operation>
            <value>Reviewed/Decision Pending,Yes,No</value>
        </filters>
        <label>All Non-TANC Commercial Diplomacy Cases</label>
        <sharedTo>
            <role>E_C_TANC</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Open_Cases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.RECORDTYPE</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>OWNER_NAME</columns>
        <columns>Actual_Create_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.STATUS</field>
            <operation>equals</operation>
            <value>On Hold,New,In Progress</value>
        </filters>
        <filters>
            <field>Request_Case_Removal__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>All Open Cases</label>
    </listViews>
    <listViews>
        <fullName>CasesOpen1yr</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.RECORDTYPE</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>OWNER_NAME</columns>
        <columns>Owners_Office__c</columns>
        <columns>CASES.LAST_UPDATE_DATE_ONLY</columns>
        <columns>Number_of_WINs_associated_to_Case__c</columns>
        <columns>Industry_Sector__c</columns>
        <columns>Primary_Country__c</columns>
        <columns>ACCOUNT.NAME_LOCAL</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Request_Case_Removal__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Days_Open__c</field>
            <operation>greaterOrEqual</operation>
            <value>365</value>
        </filters>
        <label>Cases Open &gt; 1 Yr</label>
    </listViews>
    <listViews>
        <fullName>Cases_to_Delete</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.RECORDTYPE</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>OWNER_NAME</columns>
        <columns>Actual_Create_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Request_Case_Removal__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Cases to Delete</label>
    </listViews>
    <listViews>
        <fullName>Export_gov_Feedback</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.EMAIL</columns>
        <columns>CASES.NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.TYPE</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Queue</filterScope>
        <label>Export.gov Feedback</label>
        <queue>Export_Feedback</queue>
    </listViews>
    <listViews>
        <fullName>MyCases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.RECORDTYPE</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>OWNER_NAME</columns>
        <columns>Actual_Create_Date__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Request_Case_Removal__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>My Cases</label>
    </listViews>
    <listViews>
        <fullName>MyOpenCases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.RECORDTYPE</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>OWNER_NAME</columns>
        <columns>Actual_Create_Date__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Request_Case_Removal__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>My Open Cases</label>
    </listViews>
    <listViews>
        <fullName>PS</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.STATUS</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.LAST_UPDATE_DATE_ONLY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.U_S_Business</value>
        </filters>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Privacy Shield Applications</label>
        <sharedTo>
            <group>PrivacyShield</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>PS_Dispute_Resolution_and_Email_Case</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.TYPE</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CASES.LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.Dispute_Resolution_and_Enforcement,Case.PS_Feedback,Case.Outreach,Case.Participation</value>
        </filters>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Privacy Shield Website Assistance Cases</label>
        <sharedTo>
            <group>PrivacyShield</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Privacy_Shield_Website_Assistance_test</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.TYPE</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CASES.LAST_UPDATE</columns>
        <columns>CASES.RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.Dispute_Resolution_and_Enforcement,Case.PS_Feedback,Case.Outreach,Case.Participation</value>
        </filters>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Privacy Shield Website Assistance -test</label>
        <sharedTo>
            <group>PrivacyShield</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Salesforce_Support_Case</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CASES.LAST_UPDATE</columns>
        <columns>OWNER_NAME</columns>
        <filterScope>Queue</filterScope>
        <label>Salesforce Support</label>
        <queue>Salesforce_Support</queue>
        <sharedTo>
            <role>System_Admin</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Salesforce_Support_Cases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.EMAIL</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>OWNER_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.Salesforce_Support</value>
        </filters>
        <label>Salesforce Support (Record Types) Cases</label>
        <sharedTo>
            <role>System_Admin</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Stopfakes_Website_Feedback_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>Stopfakes: Website Feedback</label>
        <queue>Stopfakes_Website_Feedback</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>TANC_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>TANC</label>
        <queue>TANC</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <recordTypes>
        <fullName>Advocacy</fullName>
        <active>true</active>
        <businessProcess>Activity Creation</businessProcess>
        <description>Work undertaken by the Advocacy Center in support of U.S. companies pursuing foreign government procurement.</description>
        <label>Advocacy</label>
    </recordTypes>
    <recordTypes>
        <fullName>Commercial_Diplomacy</fullName>
        <active>true</active>
        <businessProcess>Activity Creation</businessProcess>
        <description>G2G work to protect/advance interests of U.S. business/industry.</description>
        <label>Commercial Diplomacy</label>
    </recordTypes>
    <recordTypes>
        <fullName>Data_Protection_Authority</fullName>
        <active>true</active>
        <businessProcess>Trade Support</businessProcess>
        <description>Privacy Shield</description>
        <label>Data Protection Authority</label>
    </recordTypes>
    <recordTypes>
        <fullName>Dispute_Resolution_and_Enforcement</fullName>
        <active>true</active>
        <businessProcess>Trade Support</businessProcess>
        <description>Privacy Shield</description>
        <label>Dispute Resolution and Enforcement</label>
    </recordTypes>
    <recordTypes>
        <fullName>Documentation</fullName>
        <active>true</active>
        <businessProcess>Trade Support</businessProcess>
        <description>Export / Import Documentation for Companies</description>
        <label>Documentation</label>
    </recordTypes>
    <recordTypes>
        <fullName>European_Business</fullName>
        <active>true</active>
        <businessProcess>Trade Support</businessProcess>
        <description>Privacy Shield</description>
        <label>European Business</label>
    </recordTypes>
    <recordTypes>
        <fullName>Export_Feedback</fullName>
        <active>true</active>
        <businessProcess>Trade Support</businessProcess>
        <description>Export site feedback</description>
        <label>Export_Feedback</label>
    </recordTypes>
    <recordTypes>
        <fullName>Export_Promotion</fullName>
        <active>true</active>
        <businessProcess>Activity Creation</businessProcess>
        <description>Work with a U.S. business, educational institution, or industry association to expand U.S. exports.</description>
        <label>Export Promotion</label>
    </recordTypes>
    <recordTypes>
        <fullName>Investment_Promotion</fullName>
        <active>true</active>
        <businessProcess>Activity Creation</businessProcess>
        <description>Work with a U.S. Economic Development Organization (EDO), investment partner, or foreign investor to increase investment to the U.S.</description>
        <label>Investment Promotion</label>
    </recordTypes>
    <recordTypes>
        <fullName>Leads</fullName>
        <active>true</active>
        <businessProcess>Trade Support</businessProcess>
        <description>Leads</description>
        <label>Leads</label>
    </recordTypes>
    <recordTypes>
        <fullName>Media</fullName>
        <active>true</active>
        <businessProcess>Trade Support</businessProcess>
        <label>Media</label>
    </recordTypes>
    <recordTypes>
        <fullName>Outreach</fullName>
        <active>true</active>
        <businessProcess>Trade Support</businessProcess>
        <label>Outreach</label>
    </recordTypes>
    <recordTypes>
        <fullName>PS_Feedback</fullName>
        <active>true</active>
        <businessProcess>Trade Support</businessProcess>
        <description>Privacy Shield Feedback</description>
        <label>PS_Feedback</label>
    </recordTypes>
</CustomObject>